# Blog_fastapi

./: .dockerignore  .env.example  .gitignore  Comment_implementation.md  Dockerfile  README.md  auth.py  blog.db  check_s3.py  config.py  database.py  email_utils.py  image_utils.py  main.py  models.py  populate_db.py  pyproject.toml  requirements.txt  schemas.py  snippets.txt
alembic/: env.py
alembic/versions/: 4b61a33ab980_add_post_likes_and_comments_drop_likes_.py  70f4b9bce847_add_likes_to_posts.py  c7e2f80b1a39_add_reply_count_to_comments.py  e99961aeadfa_initial_scheme.py
populate_images/: bg1.avif
routers/: comments.py  posts.py  users.py
static/css/: main.css
static/js/: comments.js  likes.js  utils.js
templates/: account.html  forgot_password.html  home.html  layout.html  login.html  post.html  reset_password.html  user_posts.html
templates/email/: password_reset.html
tests/: conftest.py  test_posts.py  test_users.py
